[package]
name = "pulldown-cmark-ast"
version = "0.1.0"
edition = "2021"

[features]
default = ["generate"]
generate = ["dep:pulldown-cmark-to-cmark"]

[dependencies]
pulldown-cmark = { version = "0.12.2", default-features = false }
pulldown-cmark-to-cmark = { version = "19.0.0", default-features = false, optional = true }

[dev-dependencies]
insta = "1.41.1"
